# mfemElasticity

./: .gitignore  CMakeLists.txt  Config.cmake.in  INSTALL.md  README.md  configure_parallel.sh  configure_serial.sh
apps/: CMakeLists.txt  app1p.cpp  configure.sh
data/: circular_offset.msh  circular_shell.msh
doc/: Doxyfile.in  mainpage.dox  marcos.inc  mathjax_config.js
examples/: CMakeLists.txt  ex1.cpp  ex1p.cpp  ex2.cpp  ex2p.cpp  ex3.cpp  ex3p.cpp  ex4.cpp  ex4p.cpp  ex5.cpp  ex5p.cpp  ex6.cpp  ex6p.cpp  poisson.hpp  uniform_sphere.hpp
include/: mfemElasticity.hpp
include/mfemElasticity/: DtN.hpp  Legendre.hpp  Moments.hpp  Multipole.hpp  bilininteg.hpp  legendre.hpp  lininteg.hpp  mesh.hpp  operators.hpp  poisson.hpp  solvers.hpp  utils.hpp
meshing/: CMakeLists.txt  CircularMesh.cpp  CircularMesh.hpp  ball.cpp  common.cpp  common.hpp  common_test.cpp  disk.cpp  meshing_test.cpp  offset_disk.cpp  pyproject.toml
meshing/meshing/: circular_offset.py  spherical_offset.py
parallel_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
parallel_build/examples/: Makefile  cmake_install.cmake  div.gf  mesh.000000  refined.mesh  sol.000000
parallel_build/tests/: CTestTestfile.cmake  Makefile  Test1  Test1[1]_include.cmake  Test1[1]_tests.cmake  cmake_install.cmake
serial_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
serial_build/Testing/Temporary/: CTestCostData.txt
serial_build/examples/: Makefile  cmake_install.cmake
serial_build/src/: Makefile  cmake_install.cmake
serial_build/tests/: CTestTestfile.cmake  Makefile  Testlininteg[1]_include.cmake  Testlininteg[1]_tests.cmake  cmake_install.cmake
src/: CMakeLists.txt  DtN.cpp  Legendre.cpp  Moments.cpp  Multipole.cpp  bilininteg.cpp  legendre.cpp  lininteg.cpp  mesh.cpp  operators.cpp  poisson.cpp  solvers.cpp  utils.cpp
tests/: CMakeLists.txt  Test1.cpp  TestBilinearForm.cpp  TestCommon.hpp  TestDomainDivVectorDivVectorIntegrator.cpp  TestDomainDivVectorScalarIntegrator.cpp  TestDomainLFDeformationGradientIntegrator.cpp  TestDomainMatrixDeformationGradientIntegrator.cpp  TestDomainSymmetricMatrixStrainIntegrator.cpp  TestDomainTraceFreeSymmetricMatrixDeviatoricStrainIntegrator.cpp  TestDomainVectorDivVectorIntegrator.cpp  TestDomainVectorGradScalarIntegrator.cpp  TestDomainVectorGradVectorIntegrator.cpp  TestDomainVectorScalarIntegrator.cpp  TestInterpolator.cpp  TestInterpolators.cpp  TestLinearForm.cpp  Testbilininteg.cpp  Testlininteg.cpp
