include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG main
)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)
include(GoogleTest)


add_executable(TestDomainLFDeformationGradientIntegrator TestDomainLFDeformationGradientIntegrator.cpp)
target_link_libraries(TestDomainLFDeformationGradientIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainLFDeformationGradientIntegrator)

add_executable(TestInterpolators TestInterpolators.cpp)
target_link_libraries(TestInterpolators PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestInterpolators)

add_executable(TestDomainVectorScalarIntegrator TestDomainVectorScalarIntegrator.cpp)
target_link_libraries(TestDomainVectorScalarIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainVectorScalarIntegrator)

add_executable(TestDomainVectorGradScalarIntegrator TestDomainVectorGradScalarIntegrator.cpp)
target_link_libraries(TestDomainVectorGradScalarIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainVectorGradScalarIntegrator)

add_executable(TestDomainDivVectorScalarIntegrator TestDomainDivVectorScalarIntegrator.cpp)
target_link_libraries(TestDomainDivVectorScalarIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainDivVectorScalarIntegrator)

add_executable(TestDomainDivVectorDivVectorIntegrator TestDomainDivVectorDivVectorIntegrator.cpp)
target_link_libraries(TestDomainDivVectorDivVectorIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainDivVectorDivVectorIntegrator)

add_executable(TestDomainVectorGradVectorIntegrator TestDomainVectorGradVectorIntegrator.cpp)
target_link_libraries(TestDomainVectorGradVectorIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainVectorGradVectorIntegrator)

add_executable(TestDomainMatrixDeformationGradientIntegrator TestDomainMatrixDeformationGradientIntegrator.cpp)
target_link_libraries(TestDomainMatrixDeformationGradientIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainMatrixDeformationGradientIntegrator)

add_executable(TestDomainSymmetricMatrixStrainIntegrator TestDomainSymmetricMatrixStrainIntegrator.cpp)
target_link_libraries(TestDomainSymmetricMatrixStrainIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainSymmetricMatrixStrainIntegrator)


add_executable(TestDomainTraceFreeSymmetricMatrixDeviatoricStrainIntegrator TestDomainTraceFreeSymmetricMatrixDeviatoricStrainIntegrator.cpp)
target_link_libraries(TestDomainTraceFreeSymmetricMatrixDeviatoricStrainIntegrator PRIVATE  mfemElasticity gtest_main)
gtest_discover_tests(TestDomainTraceFreeSymmetricMatrixDeviatoricStrainIntegrator)

